<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_marginStart="4dp"
    android:layout_marginEnd="4dp"
    android:layout_marginBottom="4dp"
    app:cardCornerRadius="2dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:padding="10dp">

        <ImageView
            android:id="@+id/note_image"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/box"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/context_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@id/note_image"
            android:orientation="vertical">

            <TextView
                android:id="@+id/note_title"
                style="@style/titleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/title" />

            <TextView
                android:id="@+id/note_description"
                style="@style/normalText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxLines="2"
                android:text="@string/description"
                tools:text="@string/lorem_dummy_text" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/note_created_label"
                    style="@style/smallText"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignTop="@id/note_complete_button"
                    android:layout_alignBottom="@id/note_complete_button"
                    android:gravity="center_vertical"
                    android:maxLines="3"
                    android:singleLine="true"
                    android:text="@string/created" />

                <ImageView
                    android:id="@+id/note_edited_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/note_complete_button"
                    android:layout_alignBottom="@id/note_complete_button"
                    android:layout_marginStart="4dp"
                    android:layout_toEndOf="@id/note_created_label"
                    android:src="@drawable/ic_forward" />

                <Button
                    android:id="@+id/note_complete_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ic_edit"
                    android:text="@string/complete"
                    android:textColor="@color/white" />
            </RelativeLayout>
        </LinearLayout>


    </RelativeLayout>

</androidx.cardview.widget.CardView>