<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e2e2e2"
    android:orientation="vertical"
    tools:context=".ui.addEditNotes.AddEditNoteFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical"
            app:cardCornerRadius="2dp">

            <EditText
                android:id="@+id/editTextNoteTitle"
                style="@style/editTextTitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title" />


        </androidx.cardview.widget.CardView>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/note_image"
                        android:layout_width="match_parent"
                        android:layout_height="350dp"
                        android:layout_gravity="center"
                        android:visibility="gone" />

                    <EditText
                        android:id="@+id/editTextNoteDescription"
                        style="@style/editTextNormalStyle"
                        android:layout_width="match_parent"
                        android:layout_height="450dp"
                        android:gravity="start"
                        android:hint="@string/description"
                        android:scrollHorizontally="false" />

                    <EditText
                        android:id="@+id/editTextImageString"
                        style="@style/editTextNormalStyle"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:gravity="start"
                        android:hint="@string/image_url"
                        android:maxLines="10" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </ScrollView>

    </LinearLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabNoteSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:src="@drawable/ic_save"
        app:tint="@null" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>